--- a/Resources/Controllers.RegulationsController.en.resx
+++ b/Resources/Controllers.RegulationsController.en.resx
@@ -117,36 +117,49 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="strAddReg" xml:space="preserve">
-    <value>Добавить норму</value>
-    <comment>Добавить норму в таблицу</comment>
+  <data name="strConfirmRegisterPassword" xml:space="preserve">
+    <value>Confirm the password</value>
   </data>
-  <data name="strChangeReg" xml:space="preserve">
-    <value>Изменить</value>
-    <comment>Изменение нормы</comment>
+  <data name="strHeaderLogin" xml:space="preserve">
+    <value>Login page</value>
   </data>
-  <data name="strDate" xml:space="preserve">
-    <value>Дата</value>
-    <comment>Дата добавления</comment>
+  <data name="strHeaderRegister" xml:space="preserve">
+    <value>Account registration page</value>
   </data>
-  <data name="strDelete" xml:space="preserve">
-    <value>Удалить</value>
-    <comment>Удаление нормы</comment>
+  <data name="String" xml:space="preserve">
+    <value>Enter your password</value>
   </data>
-  <data name="strHeader" xml:space="preserve">
-    <value>Нормы</value>
-    <comment>Название таблицы норм на странице</comment>
+  <data name="strLoginEmail" xml:space="preserve">
+    <value>Enter your E-mail</value>
   </data>
-  <data name="strLink" xml:space="preserve">
-    <value>Ссылка</value>
-    <comment>Ссылка на норму</comment>
+  <data name="strLoginPassword" xml:space="preserve">
+    <value>Enter your password</value>
   </data>
-  <data name="strLogOut" xml:space="preserve">
-    <value>Выйти</value>
-    <comment>Выйти из текущего аккаунта</comment>
+  <data name="strNoAccess" xml:space="preserve">
+    <value>You do not have sufficient access rights!</value>
+    <comment>-</comment>
   </data>
-  <data name="strTitle" xml:space="preserve">
-    <value>Список норм</value>
-    <comment>Название вкладки</comment>
+  <data name="strRegisterEmail" xml:space="preserve">
+    <value>Enter your E-mail</value>
+  </data>
+  <data name="strRegisterPassword" xml:space="preserve">
+    <value>Enter your password</value>
+  </data>
+  <data name="strSubmitLogin" xml:space="preserve">
+    <value>Login</value>
+  </data>
+  <data name="strSubmitLogout" xml:space="preserve">
+    <value>Logout</value>
+  </data>
+  <data name="strSubmitRegistration" xml:space="preserve">
+    <value>Submit</value>
+  </data>
+  <data name="strTitleAccessDenied" xml:space="preserve">
+    <value>Access denied</value>
+    <comment>-</comment>
+  </data>
+  <data name="strWriteToAdmin" xml:space="preserve">
+    <value>Please contact site administrator.</value>
+    <comment>-</comment>
   </data>
 </root>
