--- a/Resources/Views/Regulations/Register.ru.resx
+++ b/Resources/Views/Regulations/Register.ru.resx
@@ -117,43 +117,40 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="strConfirmRegisterPassword" xml:space="preserve">
-    <value>Bestätigen Sie das Passwort</value>
+  <data name="Add_FullName" xml:space="preserve">
+    <value>Полное наименование нормативной документации</value>
   </data>
-  <data name="strHeaderLogin" xml:space="preserve">
-    <value>Loginseite</value>
+  <data name="Add_Header" xml:space="preserve">
+    <value>Добавление записей в БД.</value>
   </data>
-  <data name="strHeaderRegister" xml:space="preserve">
-    <value>Kontoregistrierungsseite</value>
+  <data name="Add_Link" xml:space="preserve">
+    <value>Введите ссылку на документацию</value>
   </data>
-  <data name="strLoginEmail" xml:space="preserve">
-    <value>Geben sie ihre E-Mail Adresse ein</value>
+  <data name="Add_ShortName" xml:space="preserve">
+    <value>Краткое наименование нормативной документации</value>
   </data>
-  <data name="strLoginPassword" xml:space="preserve">
-    <value>Geben Sie Ihr Passwort ein</value>
+  <data name="Add_Submit" xml:space="preserve">
+    <value>Отправить изменения</value>
   </data>
-  <data name="strNoAccess" xml:space="preserve">
-    <value>Sie haben nicht genügend Zugriffsrechte!</value>
+  <data name="Add_UserId" xml:space="preserve">
+    <value>Ваш Id:</value>
   </data>
-  <data name="strRegisterEmail" xml:space="preserve">
-    <value>Geben sie ihre E-Mail Adresse ein</value>
+  <data name="Edit_FullName" xml:space="preserve">
+    <value>Полное наименование нормативной документации</value>
   </data>
-  <data name="strRegisterPassword" xml:space="preserve">
-    <value>Geben Sie Ihr Passwort ein</value>
+  <data name="Edit_Header" xml:space="preserve">
+    <value>Редактирование записи</value>
   </data>
-  <data name="strSubmitLogin" xml:space="preserve">
-    <value>Anmeldung</value>
+  <data name="Edit_Link" xml:space="preserve">
+    <value>Введите ссылку на документацию</value>
   </data>
-  <data name="strSubmitLogout" xml:space="preserve">
-    <value>Ausloggen</value>
+  <data name="Edit_ShortName" xml:space="preserve">
+    <value>Краткое наименование нормативной документации</value>
   </data>
-  <data name="strSubmitRegistration" xml:space="preserve">
-    <value>Anmeldung</value>
+  <data name="Edit_Submit" xml:space="preserve">
+    <value>Отправить изменения</value>
   </data>
-  <data name="strTitleAccessDenied" xml:space="preserve">
-    <value>Der Zugriff wird verweigert</value>
-  </data>
-  <data name="strWriteToAdmin" xml:space="preserve">
-    <value>Bitte wenden Sie sich an Ihren Administrator.</value>
+  <data name="Edit_UserId" xml:space="preserve">
+    <value>Ваш Id:</value>
   </data>
 </root>
